[project]
name = "django-nestedquery"
version = "0.1.0"
readme = "readme.md"
requires-python = ">= 3.8"
description = "Django Nested Query"
authors = ["Simage <simage@gmail.com>"]
dependencies = ["django >= 3.1 <4.0.0"
packages = [
    { include = "nestedquery" },
]


[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1"

